FIX (tests): Allow to skip external network tests in CI CD

--- a/backend/.env.development.example
+++ b/backend/.env.development.example
@@ -8,6 +8,7 @@ ENV_MODE=development
 SHOW_DB_INSTALLATION_VERIFICATION_LOGS=true
 # tests
 TEST_LOCALHOST=localhost
+IS_SKIP_EXTERNAL_RESOURCES_TESTS=false
 # db
 DATABASE_DSN=host=dev-db user=postgres password=Q1234567 dbname=databasus port=5437 sslmode=disable
 DATABASE_URL=postgres://postgres:Q1234567@dev-db:5437/databasus?sslmode=disable
