--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -81,6 +81,11 @@ jobs:
           cd frontend
           npm run lint
 
+      - name: Build frontend
+        run: |
+          cd frontend
+          npm run build
+
   test-frontend:
     runs-on: ubuntu-latest
     needs: [lint-frontend]
